--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -28,14 +28,17 @@ jobs:
       - run: echo "The name of your branch is ${{ github.ref  }} and your repository is ${{ github.repository }}."
       
       - name: Check out repository code
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
+        
       - run: echo "The repository $ {{github.repository}} repository has been cloned to the runner"
 
       - name: List files in the repository 
-      - run: | 
+        run: | 
            ls ${{ github.workspace }}
+
       
       - run: echo "🍏 This job's status is ${{ job.status }}."
+
 
       - name: Run a multi-line script
         run: |
