--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,7 @@
 
 name: CI workflow for java with maven
 
-# define github events 
+# define github events: when to run
 on:
   push:
     branches: [ main ]
@@ -11,25 +11,23 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
      
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+  # define jobs: what to do
   build:
-    # The type of runner that the job will run on
+    # define runners: where to run
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    # define sequence of tasks as part of job
     steps:
-
-      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "The job is now running on a ${{ runner.os }} server hosted by GitHub! "
-      - run: echo "The name of your branch is ${{ github.ref  }} and your repository is ${{ github.repository }}."
-      
       - name: Check out repository code
-        uses: actions/checkout@v4
-        
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+        uses: actions/checkout@4
+
+      - name: specify jdk version
+        uses: actions/setup-java@v4
+        with:
+          java-version: '23'
+          distributrion: 'termurin'
+          architecture: x64
+
+      - name: Build all modules
+        run: mvn --batch-mode --update-snapshots verify
