--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: '23'
-          distributrion: 'termurin'
+          distribution: 'termurin'
           architecture: x64
 
       - name: Build all modules
