--- a/.github/workflows/cards-ci.yml
+++ b/.github/workflows/cards-ci.yml
@@ -22,7 +22,7 @@ on:
 jobs:
   build:
   # define github actions runner: define where to run
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
 
   # define sequence of tasks as part of the job
     steps:
@@ -33,8 +33,8 @@ jobs:
         uses: actions/setup-java@v4
         with:
           version: "23"
-          distributrion: "temurin"
+          distribution: "temurin"
           architecture: "x64"
 
-      - name: build the servce
+      - name: build the service
         run: mvn --batch-mode  --update-snapshots verify
