--- a/.github/workflows/cards-ci.yml
+++ b/.github/workflows/cards-ci.yml
@@ -32,7 +32,7 @@ jobs:
       - name: specify jdk
         uses: actions/setup-java@v4
         with:
-          version: "23"
+          java-version: "23"
           distribution: "temurin"
           architecture: "x64"
 
