--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -17,6 +17,23 @@ spring:
       ddl-auto: update
     show-sql: true
 
+  config:
+    import:
+      - "application-prod.yml"
+      - "application-test.yml"
+
+
+  build:
+    version: "3.0"
+
+  accounts:
+    message: "Welcome to accounts service default configuration local APIs "
+    contactDetails:
+      name: "Bao Pen - Developer"
+      email: "baopena@gmail.com"
+    calls:
+      - (555) 555-1234
+      - (555) 523-1345
 
 springdoc:
   api-docs:
@@ -24,3 +41,5 @@ springdoc:
   swagger-ui:
     enabled: true
     url: /openapi.yml
+
+
