--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -15,3 +15,33 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+    show-sql: true
+  
+  config:
+    import:
+      - "application-prod.yml"
+      - "application-test.yml"
+  
+  build:
+    version: "3.0"
+
+  accounts:
+    message: "Welcome to cards service default configuration local APIs "
+    contactDetails:
+      name: "Bao Pen - Developer"
+      email: "baopena@gmail.com"
+    calls:
+      - (555) 555-1234
+      - (555) 523-1345
+
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
+    url: /openapi.yml
+
+
+
+    
+  
