add: config files with multiple environments for loans services

--- a/loans/src/main/resources/application-prod.yml
+++ b/loans/src/main/resources/application-prod.yml
@@ -13,14 +13,13 @@ spring:
       enabled: true
 
   jpa:
-    show-sql: true
     hibernate:
       ddl-auto: update
-  
+    show-sql: true
+
   config:
-    import:
-      - "application-prod.yml"
-      - "application-test.yml"
+    activate:
+      on-profile: "prod"
 
 springdoc:
   api-docs:
