--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -21,19 +21,21 @@ spring:
     import:
       - "application-prod.yml"
       - "application-test.yml"
-
+  profiles:
+    active: 
+      - "test"
 
   build:
     version: "3.0"
 
-  accounts:
-    message: "Welcome to accounts service default configuration local APIs "
-    contactDetails:
-      name: "Bao Pen - Developer"
-      email: "baopena@gmail.com"
-    calls:
-      - (555) 555-1234
-      - (555) 523-1345
+accounts:
+  message: "Welcome to accounts service default configuration local APIs "
+  contactDetails:
+    name: "Bao Pen - Developer"
+    email: "baopena@gmail.com"
+  calls:
+    - "(555) 555-1234"
+    - "(555) 523-1345"
 
 springdoc:
   api-docs:
