--- a/accounts/src/main/resources/application-prod.yml
+++ b/accounts/src/main/resources/application-prod.yml
@@ -3,12 +3,11 @@ spring:
     activate:
       on-profile: "prod"
 
-
 build:
   version: "2.0"
 
 accounts:
-  message: "Welcome to accounts service default configuration prod APIs "
+  message: "Welcome to accounts service product configuration prod APIs "
   contactDetails:
     name: "Bao Pen - Developer"
     email: "baopena@gmail.com"
