--- a/cards/src/main/resources/application-prod.yml
+++ b/cards/src/main/resources/application-prod.yml
@@ -1,29 +1,23 @@
 spring:
-  application:
-    name: ${APP_NAME:cards}
-
-  datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: sa
-
-  h2:
-    console:
-      enabled: true
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-
   config:
     activate:
       on-profile: "prod"
 
-springdoc:
-  api-docs:
-    enabled: true
-  swagger-ui:
-    enabled: true
-    url: /openapi.yml
+build:
+  version: "2.0"
+
+cards:
+  message: "Welcome to cards service product configuration local APIs "
+  contactDetails:
+    name: "Bao Pen - Developer"
+    email: "baopena@gmail.com"
+  calls:
+    - (555) 555-1234
+    - (555) 523-1345
+
+# springdoc:
+#   api-docs:
+#     enabled: true
+#   swagger-ui:
+#     enabled: true
+#     url: /openapi.yml
