--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: ${APP_NAME:accounts}
+  profiles:
+    active: "prod"
 
   datasource:
     url: jdbc:h2:mem:testdb
@@ -16,32 +18,3 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-
-  config:
-    import:
-      - "application-prod.yml"
-      - "application-test.yml"
-  profiles:
-    active: 
-      - "test"
-
-  build:
-    version: "3.0"
-
-accounts:
-  message: "Welcome to accounts service default configuration local APIs "
-  contactDetails:
-    name: "Bao Pen - Developer"
-    email: "baopena@gmail.com"
-  calls:
-    - "(555) 555-1234"
-    - "(555) 523-1345"
-
-springdoc:
-  api-docs:
-    enabled: true
-  swagger-ui:
-    enabled: true
-    url: /openapi.yml
-
-
