--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: ${APP_NAME:loans}
+  profiles:
+    active: "prod"
 
   datasource:
     url: jdbc:h2:mem:testdb
@@ -16,30 +18,3 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
-  
-  config:
-    import:
-      - "application-prod.yml"
-      - "application-test.yml"
-
-  profiles:
-    active: "default"
-
-  build:
-    version: "3.0"
-
-loans:
-  message: "Welcome to loans service default configuration local APIs "
-  contactDetails:
-    name: "Bao Pen - Developer"
-    email: "baopena@gmail.com"
-  calls:
-    - (555) 555-1234
-    - (555) 523-1345
-
-springdoc:
-  api-docs:
-    enabled: true
-  swagger-ui:
-    enabled: true
-    url: /openapi.yml
