modify: optional from classpath for cards & loans services

--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -20,4 +20,4 @@ spring:
       ddl-auto: update
 
   config:
-    import: configserver:http://localhost:8071
+    import: "optional:configserver:http://localhost:8071"
