--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -3,20 +3,23 @@ spring:
     name: ${APP_NAME:accounts}
   profiles:
     active: "prod"
-
   datasource:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
     username: sa
     password: sa
-
   h2:
     console:
       enabled: true
-
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
   config:
     import: "optional:configserver:http://localhost:8071"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
