--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -18,8 +18,15 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
   config:
     import: "optional:configserver:http://localhost:8071"
+
+  rabbitmq:
+    host: "localhost"
+    port: 5672
+    username: "guest"
+    password: "guest"
 
 
 management:
