--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -27,4 +27,6 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include:
+          - "refresh"
+          - "busrefresh"
