--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8081
+
 spring:
   application:
     name: ${APP_NAME:cards}
@@ -27,7 +30,6 @@ spring:
     port: 5672
     username: "guest"
     password: "guest"
-
 
 management:
   endpoints:
