--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -7,13 +7,9 @@ spring:
   profiles:
     active: "prod"
   datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: sa
-  h2:
-    console:
-      enabled: true
+    url: jdbc:mysql://localhost:3307/loansdb
+    username: root
+    password: root
   jpa:
     show-sql: true
     hibernate:
