--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -14,6 +14,9 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  sql:
+    init:
+      mode: always
   config:
     import: "optional:configserver:http://localhost:8071"
 
