--- a/configserver/pom.xml
+++ b/configserver/pom.xml
@@ -13,11 +13,12 @@
 	<groupId>org.baopen753</groupId>
 	<artifactId>configserver</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>configserver</name>
-	<description>configserver</description>
+	<description>Config Server for Microservices</description>
 
 	<properties>
-		<java.version>23</java.version>
+		<java.version>21</java.version>
 		<spring-cloud.version>2024.0.1</spring-cloud.version>
 	</properties>
 	
@@ -33,10 +34,21 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-monitor</artifactId>
+		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.cloud</groupId>-->
+<!--			<artifactId>spring-cloud-starter-bus-amqp</artifactId>-->
+<!--		</dependency>-->
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
@@ -64,7 +76,7 @@
 				<version>3.4.4</version>
 				<configuration>
 					<to>
-						<image>baopen753/S{artifactId}</image>
+						<image>baopen753/${project.artifactId}:s6</image>
 					</to>
 				</configuration>
 			</plugin>
