modify: update & optimize docker compose file only config server

--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -17,6 +17,11 @@ spring:
           #native:
           #search-locations: "file:///home/baopen/Documents/config" # local system file
           #search-locations: "classpath:/config"     # tell spring cloud config where our properties are stored
+#  rabbitmq:
+#    host: "localhost"
+#    port: 5672
+#    username: "guest"
+#    password: "guest"
 
 
 encrypt:
@@ -29,9 +34,9 @@ management:
   endpoints:
     web:
       exposure:
-        include:
-          - "refresh"
-          - "busrefresh"
+        include: "*"
+#          - "refresh"
+#          - "busrefresh"
   health:
     readiness-state:
       enabled: true
