--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -58,11 +58,12 @@
             <optional>true</optional>
         </dependency>
 
-        <dependency>
+        <!-- <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
-        </dependency>
+        </dependency> -->
+        
 
         <dependency>
             <groupId>org.projectlombok</groupId>
