--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -6,17 +6,31 @@ spring:
     name: ${APP_NAME:loans}
   profiles:
     active: "prod"
+  # datasource:
+  #   url: jdbc:mysql://localhost:3307/loansdb
+  #   username: root
+  #   password: root
+  # jpa:
+  #   show-sql: true
+  #   hibernate:
+  #     ddl-auto: update
+  # sql:
+  #   init:
+  #     mode: always
+
   datasource:
-    url: jdbc:mysql://localhost:3307/loansdb
-    username: root
-    password: root
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password: ''
+  h2:
+    console:
+      enabled: true
   jpa:
-    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
-  sql:
-    init:
-      mode: always
+    show-sql: true
   config:
     import: "optional:configserver:http://localhost:8071"
 
