--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -64,6 +64,11 @@
             <scope>runtime</scope>
         </dependency> -->
         
+        <dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -87,8 +92,6 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
-
-
     </dependencies>
 
     <build>
