modify: refactor dependencies for microservices & configserver

--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -39,4 +39,6 @@ management:
   endpoints:
     web:
       exposure:
-        include: "refresh"
+        include:
+          - "refresh"
+          - "busrefresh"
