--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -18,8 +18,8 @@ services:
       service: network-deploy-service
 
   configserver:
-    image: "baopen753/configserver"
-    container_name: configserver-ms
+    image: "baopen753/configserver:s6"
+    container_name: configserver
     ports:
       - "8071:8071"
     depends_on:
@@ -36,7 +36,7 @@ services:
       service: microservice-base-config
 
   accounts:
-    image: "baopen753/accounts-service-v2"
+    image: "baopen753/accounts-service:s6"
     container_name: accounts-ms
     ports:
       - "8080:8080"
@@ -50,7 +50,7 @@ services:
       service: microservice-configserver-config
 
   cards:
-    image: "baopen753/cards-service-v2"
+    image: "baopen753/cards-service:s6"
     container_name: "cards-ms"
     ports:
       - "8081:8080"
@@ -64,7 +64,7 @@ services:
       service: microservice-configserver-config
 
   loans:
-    image: "baopen753/loans-service-v2"
+    image: "baopen753/loans-service:s6"
     container_name: loans-ms
     ports:
       - "8082:8080"
