modify: add tags for build image toop jib

--- a/loans/pom.xml
+++ b/loans/pom.xml
@@ -109,7 +109,7 @@
 				<version>3.4.4</version>
 				<configuration>
 					<to>
-						<image>baopen753/${project.artifactId}</image>
+						<image>baopen753/${project.artifactId}:s7</image>
 					</to>
 				</configuration>
 			</plugin>
