done: finish config for creating docker images for all serices & configserver

--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -9,27 +9,17 @@
         <relativePath/>           <!-- lookup parent from repository -->
     </parent>
     <groupId>org.baopen753</groupId>
-    <artifactId>accounts</artifactId>
+    <artifactId>accounts-ms</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>accounts</name>
     <description>accounts</description>
 
     <properties>
-        <java.version>23</java.version>
+        <java.version>21</java.version>
         <spring-cloud.version>2024.0.1</spring-cloud.version>
     </properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+  
 
     <dependencies>
         <dependency>
@@ -95,13 +85,20 @@
         </dependency>
     </dependencies>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
