--- a/loans/pom.xml
+++ b/loans/pom.xml
@@ -9,13 +9,13 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.baopen753</groupId>
-	<artifactId>loans</artifactId>
+	<artifactId>loans-ms</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>loans</name>
 	<description>loans</description>
 
 	<properties>
-		<java.version>23</java.version>
+		<java.version>21</java.version>
 		<spring-cloud.version>2024.0.1</spring-cloud.version>
 	</properties>
 
