--- a/docker-compose/test/common-config.yml
+++ b/docker-compose/test/common-config.yml
@@ -3,6 +3,23 @@ services:
     networks:
       - baopen753
 
+  microservice-db-config:
+    extends:
+      service: network-deploy-service
+    image: mysql
+    deploy:
+      resources:
+        limits:
+          memory: 700m
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+      start_period: 10s
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+
   microservice-base-config:
     extends:
       service: network-deploy-service
@@ -19,6 +36,8 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: test
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
 
 networks:
   baopen753:
