--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -1,23 +1,6 @@
 version: "3.8"
 
 services:
-  # rabbitmq:
-  #   image: rabbitmq:3.12-management
-  #   hostname: rabbitmq
-  #   container_name: rabbitmq
-  #   ports:
-  #     - "5672:5672"
-  #     - "15672:15672"
-  #   healthcheck:
-  #     test: rabbitmq-diagnostics check_port_connectivity
-  #     interval: 10s
-  #     timeout: 5s
-  #     retries: 10
-  #     start_period: 5s
-  #   extends:
-  #     file: common-config.yml
-  #     service: network-deploy-service
-
   accountsdb:
     container_name: accountsdb
     ports:
@@ -53,9 +36,6 @@ services:
     container_name: configserver
     ports:
       - "8071:8071"
-    # depends_on:
-    #   rabbitmq:
-    #     condition: service_healthy
     healthcheck:
       test: "curl --fail --silent localhost:8071/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
@@ -71,9 +51,6 @@ services:
     container_name: accounts-ms
     ports:
       - "8080:8080"
-    # depends_on:
-    #   configserver:
-    #     condition: service_healthy
     depends_on:
       accountsdb:
         condition: service_healthy
@@ -86,19 +63,15 @@ services:
 
   cards:
     image: "baopen753/cards-ms:s7"
-    container_name: "cards-ms"
+    container_name: cards-ms
     ports:
       - "8081:8080"
-    # depends_on:
-    #   configserver:
-    #     condition: service_healthy
     depends_on:
       cardsdb:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "cards"
       SPRING_DATASOURCE_URL: jdbc:mysql://cardsdb:3306/cardsdb
-
     extends:
       file: common-config.yml
       service: microservice-configserver-config
@@ -108,16 +81,12 @@ services:
     container_name: loans-ms
     ports:
       - "8082:8080"
-    # depends_on:
-    #   configserver:
-    #     condition: service_healthy
     depends_on:
       loansdb:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "loans"
       SPRING_DATASOURCE_URL: jdbc:mysql://loansdb:3306/loansdb
-
     extends:
       file: common-config.yml
       service: microservice-configserver-config
