--- a/.github/workflows/cards-ci.yml
+++ b/.github/workflows/cards-ci.yml
@@ -35,5 +35,5 @@ jobs:
           architecture: "x64"
 
       - name: build the service
-        run: mvn --batch-mode  --update-snapshots verify
+        run: mvn --batch-mode  --update-snapshots verify test
         working-directory: ./cards
