--- a/.github/workflows/loans-ci.yml
+++ b/.github/workflows/loans-ci.yml
@@ -37,6 +37,6 @@ jobs:
           architecture: "x64"
 
       - name: build the service
-        run: mvn --batch-mode  --update-snapshots verify
+        run: mvn --batch-mode  --update-snapshots verify test
         working-directory: ./loans
 
